# rules-python-host

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  defs.bzl  fails.sh  pytest_wrapper.py  requirements_lock_linux.txt  requirements_lock_windows.txt  test.py
