load("@pip//:requirements.bzl", "all_requirements")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

platform(
    name = "arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

compile_pip_requirements(
    name = "pip",
    timeout = "moderate",
    extra_args = [
        "--resolver=backtracking",
        "--allow-unsafe",
        "--strip-extras",
    ],
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock_linux.txt",
)

py_test(
    name = "test",
    srcs = [
        ":pytest_wrapper.py",
        ":test.py",
    ],
    args = [
        "--capture=no",
        "-vvvv",
        "--durations=0",
        "$(location :test.py)",
    ],
    main = ":pytest_wrapper.py",
    python_version = "PY3",
    srcs_version = "PY3",
    deps = all_requirements,
)
